Fix conversation list not showing all conversations when "msgTriggerTimeout" is present (#2792)
* CO-99 added Setting to disable bot reply once conversation is assigned to agent

* Fix bot welcome message not coming as notification when trigger timeout is enabled

* CO-99 remove if conditions to check for the types of icons in Banner.js

* Fix coversation list not showing all conversations when "msgTriggerTImeout" is present

--- a/server/src/webplugin/css/app/mck-sidebox-1.0.css
+++ b/server/src/webplugin/css/app/mck-sidebox-1.0.css
@@ -3668,6 +3668,7 @@ display: none;
 }
 .mck-icon--location svg, .mck-icon--email svg {
 	vertical-align: sub;
+	margin-right: 7px;
 }
 
 .mck-icon-delivered {
